--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -42,5 +42,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="app"></div>
+    <div id="portal"></div>
   </body>
 </html>
